# scorum

./: .clang-format  .dockerignore  .gitignore  .gitmodules  1.diff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.toolchain  Doxyfile  Jenkins.sh  Jenkinsfile  LICENSE.md  README.md  autodoc.sh  circle.yml  genesis.json
example_plugins/hello_api/: CMakeLists.txt  hello_api_plugin.cpp
libraries/: CMakeLists.txt  libraries.natvis
libraries/account_identity/: CMakeLists.txt  impacted.cpp  owned.cpp
libraries/app/: CMakeLists.txt  advertising_api.cpp  api.cpp  application.cpp  betting_api.cpp  chain_api.cpp  database_api.cpp  impacted.cpp  log_configurator.cpp  plugin.cpp  scorum_api_objects.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  data_service_factory.cpp  database.cpp  database_witness_schedule.cpp  dbs_account.cpp  dbs_atomicswap.cpp  dbs_base_impl.cpp  dbs_budget.cpp  dbs_comment.cpp  dbs_comment_vote.cpp  dbs_committee_proposal.cpp  dbs_database_index.cpp  dbs_database_witness_schedule.cpp  dbs_decline_voting_rights_request.cpp  dbs_dynamic_global_property.cpp  dbs_escrow.cpp  dbs_property.cpp  dbs_proposal.cpp  dbs_registration.cpp  dbs_registration_committee.cpp  dbs_registration_pool.cpp  dbs_reward.cpp  dbs_reward_fund.cpp  dbs_vesting_delegation.cpp  dbs_withdraw_vesting_route.cpp  dbs_witness.cpp  dbs_witness_vote.cpp  dbservice.cpp  debug_stats.cpp  fork_database.cpp  genesis.cpp  genesis_state.cpp  proposal_create_evaluator.cpp  scorum_evaluator.cpp  scorum_objects.cpp  shared_authority.cpp  steem_evaluator.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chainbase/: CMakeLists.txt  README.md  chainbase.cpp  db_state.cpp  segment_manager.cpp  undo_db_state.cpp
libraries/cli/: CMakeLists.txt  app.cpp  completionregistry.cpp  formatter.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/graphene_utils/: words.cpp
libraries/manifest/: CMakeLists.txt
libraries/net/: CMakeLists.txt  core_messages.cpp  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  peer_database.cpp  stcp_socket.cpp
libraries/plugins/: CMakeLists.txt
libraries/protocol/: CMakeLists.txt  asset.cpp  atomicswap_helper.cpp  authority.cpp  block.cpp  comment.cpp  config.cpp  get_config.cpp  odds.cpp  operation_util_impl.cpp  operations.cpp  proposal_operations.cpp  scorum_operations.cpp  sign_state.cpp  steem_operations.cpp  transaction.cpp  types.cpp  version.cpp
libraries/rewards/: CMakeLists.txt  curve.cpp  formulas.cpp
libraries/rewards_math/: CMakeLists.txt  curve.cpp  formulas.cpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/typeid/: CMakeLists.txt
libraries/ui/: CMakeLists.txt  formatter.cpp
libraries/utilities/: CMakeLists.txt  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/utils/: CMakeLists.txt
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  utils.cpp  wallet.cpp
programs/cli_wallet/: CMakeLists.txt  main.cpp  wallet_app.cpp  wallet_app.hpp
programs/create_genesis/: CMakeLists.txt  file_parser.cpp  file_parser.hpp  genesis_mapper.cpp  genesis_mapper.hpp  genesis_parser.cpp  genesis_tester.cpp  genesis_tester.hpp  main.cpp  parsers.hpp
programs/scorumd/: CMakeLists.txt  log_configurator.cpp  log_configurator.hpp  main.cpp
programs/util/: CMakeLists.txt  get_dev_key.cpp  inflation_model.cpp  inflation_plot.py  newplugin.py  schema_test.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_shared_mem.cpp  test_sqrt.cpp
tests/: CMakeLists.txt  README.md
tests/chain_tests/: CMakeLists.txt  account_data_service_tests.cpp  block_tests.cpp  boost_interprocess_clang_test.cpp  chain_api_tests.cpp  escrow_transfer_operation_tests.cpp  fork_tests.cpp  genesis_db_tests.cpp  hardfork_tests.cpp  live_tests.cpp  main.cpp  merkle_root_tests.cpp  operation_tests.cpp  operation_time_tests.cpp  reward_service_tests.cpp  serialization_tests.cpp  witness_data_service_tests.cpp
tests/common/: CMakeLists.txt  actor.hpp  actoractions.cpp  actoractions.hpp  database_betting_integration.cpp  database_betting_integration.hpp  database_blog_integration.cpp  database_blog_integration.hpp  database_default_integration.cpp  database_default_integration.hpp  database_fixture.cpp  database_fixture.hpp  database_integration.cpp  database_integration.hpp  database_trx_integration.cpp  database_trx_integration.hpp  defines.hpp  detail.cpp  detail.hpp  devcommittee_fixture.hpp  genesis.hpp  genesis_db_fixture.cpp  genesis_db_fixture.hpp
tests/performance_tests/: CMakeLists.txt  main.cpp  multiply_by_fractional_tests.cpp  performance_common.cpp  performance_common.hpp
tests/plugin_tests/: CMakeLists.txt  main.cpp  market_history.cpp  plugin_ops.cpp
tests/tests/: CMakeLists.txt  account_data_service_tests.cpp  basic_tests.cpp  block_tests.cpp  budget_service_tests.cpp  escrow_transfer_operation_tests.cpp  genesis_tests.cpp  live_tests.cpp  main.cpp  operation_tests.cpp  operation_time_tests.cpp  proposal_create_evaluator_tests.cpp  proposal_create_operation_tests.cpp  proposal_evaluator_tests.cpp  proposal_vote_operation_tests.cpp  reward_service_tests.cpp  serialization_tests.cpp
tests/ucommon/: CMakeLists.txt  actor.cpp  actor.hpp  db_mock.cpp  db_mock.hpp  defines.hpp  genesis.cpp  genesis.hpp  logger.cpp  logger.hpp  object_wrapper.hpp  service_wrappers.hpp  utils.hpp
tests/utests/: CMakeLists.txt  app_tests.cpp  basic_tests.cpp  block_tasks_tests.cpp  config_api_tests.cpp  create_account_by_committee_evaluator_tests.cpp  flat_map_tests.cpp  fraction_tests.cpp  genesis_tests.cpp  main.cpp  market_tests.cpp  market_type_tests.cpp  object_type_id_cast_tests.cpp  odds_tests.cpp  pack_unpack_reflected_obj_tests.cpp  print_tests.cpp  proposal_vote_operation_tests.cpp  rewards_math.cpp  serialization_tests.cpp  signed_transaction_serialization_tests.cpp  tasks_base_tests.cpp  vote_evaluator_tests.cpp  (+1 more)
(+3556 files in other folders)
